# laserhok-workflow

./: pyproject.toml
creator_administrator/laser/src/: global_variables.py
creator_administrator/printer/email_templates/: print_settings_template.json
creator_administrator/printer/src/: global_variables.py  printer_app.py
creator_administrator/src/: app.py  job_tracker.py
creator_administrator/tests/: test_printer_app.py
